--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@types/chai": "^4.2.7",
     "@types/mocha": "^5.2.7",
+    "knex": "^0.20.8",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
     "mongodb": "^3.4.1",
+    "pg": "^7.17.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
