--- a/backend/package.json
+++ b/backend/package.json
@@ -10,13 +10,21 @@
   "license": "ISC",
   "dependencies": {
     "@types/chai": "^4.2.7",
+    "@types/koa-passport": "^4.0.2",
+    "@types/koa-session": "^5.10.1",
     "@types/mocha": "^5.2.7",
+    "@types/passport": "^1.0.2",
     "knex": "^0.20.8",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-logger": "^3.2.1",
+    "koa-passport": "^4.1.3",
+    "koa-passport-ts": "^0.1.4",
     "koa-router": "^7.4.0",
-    "mongodb": "^3.4.1",
+    "koa-session": "^5.12.3",
+    "koa-session-ts": "^0.2.3",
+    "npm": "^6.13.6",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^7.17.1",
     "request": "^2.88.0"
   },
