--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+s See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # Dependencies
 node_modules/
@@ -7,7 +7,6 @@ node_modules/
 build
 
 # Runtime data
-database.sqlite
 
 # Test coverage
 coverage
@@ -27,3 +26,4 @@ yarn-error.log*
 
 # Misc
 .DS_Store
+.env
