--- a/backend/package.json
+++ b/backend/package.json
@@ -9,30 +9,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/chai": "^4.2.7",
-    "@types/koa-passport": "^4.0.2",
-    "@types/koa-session": "^5.10.1",
-    "@types/mocha": "^5.2.7",
-    "@types/passport": "^1.0.2",
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
     "knex": "^0.20.8",
-    "koa": "^2.11.0",
-    "koa-bodyparser": "^4.2.1",
-    "koa-logger": "^3.2.1",
-    "koa-passport": "^4.1.3",
-    "koa-passport-ts": "^0.1.4",
-    "koa-router": "^7.4.0",
-    "koa-session": "^5.12.3",
-    "koa-session-ts": "^0.2.3",
     "npm": "^6.13.6",
+    "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^7.17.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "@types/koa": "^2.11.0",
-    "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-json": "^2.0.18",
-    "@types/koa-router": "^7.0.42",
+    "@types/body-parser": "^1.17.1",
+    "@types/chai": "^4.2.7",
+    "@types/cookie-session": "^2.0.37",
+    "@types/express": "^4.17.2",
+    "@types/mocha": "^5.2.7",
+    "@types/passport": "^1.0.2",
     "@types/node": "^13.1.1",
     "chai": "^4.2.0",
     "koa-json": "^2.0.2",
