--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^6.11.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "knex": "^0.20.8",
