--- a/server/package.json
+++ b/server/package.json
@@ -3,17 +3,21 @@
   "version": "1.0.0",
   "description": "a backend for the weekly journal application",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/server.ts",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "client": "npm run start --prefix client",
+    "server": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/server.ts",
     "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ajv": "^6.11.0",
+    "concurrently": "^5.1.0",
     "cookie-session": "^1.4.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.20.8",
-    "npm": "^6.13.6",
+    "npm": "^6.13.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^7.17.1",
@@ -25,8 +29,8 @@
     "@types/cookie-session": "^2.0.37",
     "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.7",
-    "@types/passport": "^1.0.2",
     "@types/node": "^13.1.1",
+    "@types/passport": "^1.0.2",
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
     "ts-node": "^8.5.4",
