--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^7.17.1",
+    "redux-thunk": "^2.3.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
